--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>OpsOh – Tools for everyday tasks</title>
+    <title>OpsOh – Apps for everyday tasks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="OpsOh builds small, focused iOS utilities that do one job well. On-device, fast, and no accounts required.">
     <link rel="stylesheet" href="/assets/css/style.css">
