--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <div class="app-grid">
 
             <article class="app-card">
-                <div class="app-icon">🧼</div>
+               <div class="app-icon">
+  <img src="/assets/img/clean-screenshot.jpg" alt="Clean Screenshot icon">
+</div>
                 <div class="app-text">
                     <div class="app-name">Clean Screenshot</div>
                     <div class="app-tagline">Remove status bars & clutter from screenshots.</div>
