--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <article class="app-card">
                <div class="app-icon">
   <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
+</div>
                 <div class="app-text">
                     <div class="app-name">Clean Screenshot</div>
                     <div class="app-tagline">Remove status bars & clutter from screenshots.</div>
