--- a/apps/index.html
+++ b/apps/index.html
@@ -33,9 +33,9 @@
                 <div class="app-grid">
 
             <article class="app-card">
-                <div class="app-icon">🧼</div>
-                <div class="app-text">
-                    <div class="app-name">Clean Screenshot</div>
+             <div class="app-icon">
+  <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
+</div>
                     <div class="app-tagline">Remove status bars & clutter from screenshots.</div>
                     <div class="app-meta">Screenshots · iPhone</div>
                 </div>
