--- a/index.html
+++ b/index.html
@@ -1,130 +1,175 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>OpsOh – Apps for everyday tasks</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="OpsOh builds small, focused iOS utilities that do one job well. On-device, fast, and no accounts required.">
-    <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8">
+  <title>OpsOh – Tools for everyday tasks.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="description"
+    content="OpsOh builds small, focused utilities for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
+  >
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-<div class="site-wrapper">
+  <div class="site-wrapper">
     <header>
-        <div class="header-inner">
-            <div class="brand">
-                <div class="brand-mark"></div>
-                <div class="brand-name">OpsOh</div>
-            </div>
-            <nav class="nav">
-                <a href="/" class="current">Home</a>
-                <a href="/apps/">Apps</a>
-            </nav>
+      <div class="header-inner">
+        <div class="brand">
+          <div class="brand-mark"></div>
+          <div class="brand-name">OpsOh</div>
         </div>
+
+        <nav class="nav">
+          <a href="/" class="current">Home</a>
+          <a href="/apps/">Apps</a>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <div class="main-inner">
-            <section class="hero">
-                <div class="hero-kicker">Independent iOS studio</div>
-                <h1 class="hero-title">Tools for everyday tasks.</h1>
-                <p class="hero-subtitle">
-                    OpsOh builds small, focused utilities for iPhone. No accounts, no ads – just fast, on‑device tools that do one job well.
-                </p>
-                <div class="hero-badges">
-                    <span>• Built for iOS</span>
-                    <span>• On‑device processing</span>
-                    <span>• No subscriptions</span>
-                </div>
-            </section>
+      <!-- Hero -->
+      <section class="hero">
+        <h1>Tools for everyday tasks.</h1>
+        <p class="hero-lead">
+          OpsOh builds small, focused utilities for iPhone. No accounts, no ads –
+          just fast, on-device tools that do one job well.
+        </p>
 
-            <section>
-                <div class="section-header">
-                    <div>
-                        <div class="section-title">Featured apps</div>
-                        <div class="section-subtitle">A few of the tools available today.</div>
-                    </div>
-                    <div class="section-subtitle">
-                        <a href="/apps/">Browse all apps →</a>
-                    </div>
-                </div>
+        <p class="hero-meta">
+          <span>• Built for iOS</span>
+          <span>• On-device processing</span>
+          <span>• No subscriptions</span>
+        </p>
+      </section>
 
-                <div class="app-grid">
-
-            <article class="app-card">
-               <div class="app-icon">
-  <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
-</div>
-                <div class="app-text">
-                    <div class="app-name">Clean Screenshot</div>
-                    <div class="app-tagline">Remove status bars & clutter from screenshots.</div>
-                    <div class="app-meta">Screenshots · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-
-            <article class="app-card">
-                <div class="app-icon">📄</div>
-                <div class="app-text">
-                    <div class="app-name">Split Merge PDF</div>
-                    <div class="app-tagline">Split one PDF into many, or merge multiple into one.</div>
-                    <div class="app-meta">PDF tools · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-
-            <article class="app-card">
-                <div class="app-icon">✍️</div>
-                <div class="app-text">
-                    <div class="app-name">ScanSignPDF</div>
-                    <div class="app-tagline">Scan, sign, and export PDFs right on your device.</div>
-                    <div class="app-meta">PDF tools · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-
-            <article class="app-card">
-                <div class="app-icon">🖼️</div>
-                <div class="app-text">
-                    <div class="app-name">Images to PDF</div>
-                    <div class="app-tagline">Turn your photos into a single shareable PDF.</div>
-                    <div class="app-meta">Photos · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-
-            <article class="app-card">
-                <div class="app-icon">📷</div>
-                <div class="app-text">
-                    <div class="app-name">Photo HEIC to JPEG</div>
-                    <div class="app-tagline">Convert HEIC photos to standard JPEG files.</div>
-                    <div class="app-meta">Photos · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-
-            <article class="app-card">
-                <div class="app-icon">📎</div>
-                <div class="app-text">
-                    <div class="app-name">Attachments to PDF</div>
-                    <div class="app-tagline">Turn email attachments into a single PDF.</div>
-                    <div class="app-meta">Files · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-                </div>
-            </section>
+      <!-- Featured apps -->
+      <section class="featured">
+        <div class="section-header">
+          <h2>Featured apps</h2>
+          <p>A few of the tools available today.</p>
         </div>
+
+        <div class="app-grid">
+          <!-- Clean Screenshot -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Clean Screenshot</div>
+              <div class="app-tagline">
+                Remove status bars &amp; clutter from screenshots.
+              </div>
+              <div class="app-meta">Screenshots · iPhone</div>
+            </div>
+            <div class="app-link">
+              <span class="app-link-label">Coming soon</span>
+            </div>
+          </article>
+
+          <!-- Split Merge PDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Split Merge PDF</div>
+              <div class="app-tagline">
+                Split one PDF into many, or merge multiple into one.
+              </div>
+              <div class="app-meta">PDF tools · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
+
+          <!-- ScanSignPDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">ScanSignPDF</div>
+              <div class="app-tagline">
+                Scan, sign, and export PDFs right on your device.
+              </div>
+              <div class="app-meta">PDF tools · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
+
+          <!-- Images to PDF (no icon yet) -->
+          <article class="app-card">
+            <div class="app-icon app-icon-placeholder">
+              <span>PDF</span>
+            </div>
+            <div class="app-text">
+              <div class="app-name">Images to PDF</div>
+              <div class="app-tagline">
+                Turn your photos into a single shareable PDF.
+              </div>
+              <div class="app-meta">Photos · iPhone</div>
+            </div>
+            <div class="app-link">
+              <span class="app-link-label">Coming soon</span>
+            </div>
+          </article>
+
+          <!-- Photo HEIC to JPEG -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Photo HEIC to JPEG</div>
+              <div class="app-tagline">
+                Convert HEIC photos to standard JPEG files.
+              </div>
+              <div class="app-meta">Photos · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
+
+          <!-- Attachments to PDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/attachments-to-pdf.jpg" alt="Attachments to PDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Attachments to PDF</div>
+              <div class="app-tagline">
+                Turn email attachments into a single PDF.
+              </div>
+              <div class="app-meta">Files · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
+        </div>
+
+        <div class="browse-link">
+          <a href="/apps/">Browse all apps →</a>
+        </div>
+      </section>
     </main>
 
-    <footer>
-        <div class="footer-inner">
-            <div>© 2026 OpsOh. Small, focused tools for everyday tasks.</div>
-            <div class="footer-links">
-                <a href="/apps/">Apps</a>
-                <a href="https://opsoh.github.io/opsoh-privacy/" target="_blank" rel="noopener">Privacy</a>
-            </div>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div class="footer-left">
+          © 2026 OpsOh. Small, focused tools for everyday tasks.
         </div>
+        <div class="footer-right">
+          <a href="/apps/">Apps</a>
+          <a href="/privacy/">Privacy</a>
+        </div>
+      </div>
     </footer>
-</div>
+  </div>
 </body>
 </html>
