--- a/apps/index.html
+++ b/apps/index.html
@@ -1,154 +1,228 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Apps – OpsOh</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="All iOS utilities by OpsOh in one place.">
-    <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8">
+  <title>Apps – OpsOh</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="description"
+    content="All iOS utilities by OpsOh in one place – PDF tools, photo tools, and more."
+  >
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-<div class="site-wrapper">
+  <div class="site-wrapper">
     <header>
-        <div class="header-inner">
-            <div class="brand">
-                <div class="brand-mark"></div>
-                <div class="brand-name">OpsOh</div>
-            </div>
-            <nav class="nav">
-                <a href="/">Home</a>
-                <a href="/apps/" class="current">Apps</a>
-            </nav>
+      <div class="header-inner">
+        <div class="brand">
+          <div class="brand-mark"></div>
+          <div class="brand-name">OpsOh</div>
         </div>
+
+        <nav class="nav">
+          <a href="/">Home</a>
+          <a href="/apps/" class="current">Apps</a>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <div class="main-inner">
-            <section>
-                <h1 class="page-title">All apps</h1>
-                <p class="page-subtitle">
-                    A growing collection of focused utilities. Tap any app to open it on the App Store.
-                </p>
+      <section class="hero hero-compact">
+        <h1>OpsOh apps</h1>
+        <p class="hero-lead">
+          A growing set of small utilities for iPhone. Built for speed, privacy,
+          and getting one job done cleanly.
+        </p>
+      </section>
 
-                <div class="app-grid">
+      <section class="apps-list">
+        <div class="app-grid app-grid-large">
 
-            <article class="app-card">
-             <div class="app-icon">
-  <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
-</div>
-                    <div class="app-tagline">Remove status bars & clutter from screenshots.</div>
-                    <div class="app-meta">Screenshots · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Clean Screenshot -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Clean Screenshot</div>
+              <div class="app-tagline">
+                Remove status bars &amp; clutter from screenshots.
+              </div>
+              <div class="app-meta">Screenshots · iPhone</div>
+            </div>
+            <div class="app-link">
+              <span class="app-link-label">Coming soon</span>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">🧽</div>
-                <div class="app-text">
-                    <div class="app-name">ScreenshotCleaner</div>
-                    <div class="app-tagline">Tidy screenshots in bulk with a simple workflow.</div>
-                    <div class="app-meta">Screenshots · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Split Merge PDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Split Merge PDF</div>
+              <div class="app-tagline">
+                Split one PDF into many, or merge multiple into one.
+              </div>
+              <div class="app-meta">PDF tools · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">📄</div>
-                <div class="app-text">
-                    <div class="app-name">Split Merge PDF</div>
-                    <div class="app-tagline">Split or merge PDFs in a few taps.</div>
-                    <div class="app-meta">PDF tools · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- ScanSignPDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">ScanSignPDF</div>
+              <div class="app-tagline">
+                Scan, sign, and export PDFs right on your device.
+              </div>
+              <div class="app-meta">PDF tools · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">✍️</div>
-                <div class="app-text">
-                    <div class="app-name">ScanSignPDF</div>
-                    <div class="app-tagline">Scan, sign, and export PDFs.</div>
-                    <div class="app-meta">PDF tools · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Images to PDF (no icon yet) -->
+          <article class="app-card">
+            <div class="app-icon app-icon-placeholder">
+              <span>PDF</span>
+            </div>
+            <div class="app-text">
+              <div class="app-name">Images to PDF</div>
+              <div class="app-tagline">
+                Turn one or more photos into a single shareable PDF.
+              </div>
+              <div class="app-meta">Photos · iPhone</div>
+            </div>
+            <div class="app-link">
+              <span class="app-link-label">Coming soon</span>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">📎</div>
-                <div class="app-text">
-                    <div class="app-name">Attachments to PDF</div>
-                    <div class="app-tagline">Combine attachments into a single PDF.</div>
-                    <div class="app-meta">Files · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Photo HEIC to JPEG -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Photo HEIC to JPEG</div>
+              <div class="app-tagline">
+                Convert HEIC photos to standard JPEG files.
+              </div>
+              <div class="app-meta">Photos · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">📷</div>
-                <div class="app-text">
-                    <div class="app-name">Photo HEIC to JPEG</div>
-                    <div class="app-tagline">Convert HEIC photos to standard JPEG.</div>
-                    <div class="app-meta">Photos · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Rename Photos -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/rename-photos.jpg" alt="Rename Photos icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Rename Photos</div>
+              <div class="app-tagline">
+                Batch-rename photos with clean, consistent filenames.
+              </div>
+              <div class="app-meta">Photos · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">☀️</div>
-                <div class="app-text">
-                    <div class="app-name">UVSmart</div>
-                    <div class="app-tagline">UV index helper for safer time in the sun.</div>
-                    <div class="app-meta">Weather · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- Attachments to PDF -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/attachments-to-pdf.jpg" alt="Attachments to PDF icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">Attachments to PDF</div>
+              <div class="app-tagline">
+                Turn email attachments into a single PDF.
+              </div>
+              <div class="app-meta">Files · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">🚗</div>
-                <div class="app-text">
-                    <div class="app-name">EVSmart</div>
-                    <div class="app-tagline">Estimate EV range and charging time.</div>
-                    <div class="app-meta">EV helper · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- UVSmart -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/uvsmart.jpg" alt="UVSmart icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">UVSmart</div>
+              <div class="app-tagline">
+                Check UV levels and get simple sun-safety guidance.
+              </div>
+              <div class="app-meta">Weather · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">💧</div>
-                <div class="app-text">
-                    <div class="app-name">DrinQ</div>
-                    <div class="app-tagline">Track water intake with a simple daily goal.</div>
-                    <div class="app-meta">Health · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
+          <!-- EVSmart -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/evsmart.jpg" alt="EVSmart icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">EVSmart</div>
+              <div class="app-tagline">
+                Quick EV range and charging helpers for everyday trips.
+              </div>
+              <div class="app-meta">EV tools · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-            <article class="app-card">
-                <div class="app-icon">🖼️</div>
-                <div class="app-text">
-                    <div class="app-name">Images to PDF</div>
-                    <div class="app-tagline">Turn your photos into a single PDF.</div>
-                    <div class="app-meta">Photos · iPhone</div>
-                </div>
-                <a class="app-link" href="#" target="_blank" rel="noopener">View</a>
-            </article>
-                </div>
+          <!-- DrinQ -->
+          <article class="app-card">
+            <div class="app-icon">
+              <img src="/assets/img/drinq.jpg" alt="DrinQ icon">
+            </div>
+            <div class="app-text">
+              <div class="app-name">DrinQ</div>
+              <div class="app-tagline">
+                Track your daily water intake with simple streaks &amp; goals.
+              </div>
+              <div class="app-meta">Health · iPhone</div>
+            </div>
+            <div class="app-link">
+              <a href="#" class="app-link-label">View</a>
+            </div>
+          </article>
 
-                <p class="section-subtitle" style="margin-top:18px;">
-                    More utilities are in the works. OpsOh focuses on small, reliable tools that are easy to trust and easy to keep.
-                </p>
-            </section>
         </div>
+      </section>
     </main>
 
-    <footer>
-        <div class="footer-inner">
-            <div>© 2026 OpsOh.</div>
-            <div class="footer-links">
-                <a href="/">Home</a>
-                <a href="https://opsoh.github.io/opsoh-privacy/" target="_blank" rel="noopener">Privacy</a>
-            </div>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div class="footer-left">
+          © 2026 OpsOh. Small, focused tools for everyday tasks.
         </div>
+        <div class="footer-right">
+          <a href="/">Home</a>
+          <a href="/privacy/">Privacy</a>
+        </div>
+      </div>
     </footer>
-</div>
+  </div>
 </body>
 </html>
