--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
           <!-- Clean Screenshot -->
           <article class="app-card">
             <div class="app-icon">
-              <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
+              <img
+                src="/assets/img/clean-screenshot.jpeg"
+                alt="Clean Screenshot icon"
+                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
+              >
             </div>
             <div class="app-text">
               <div class="app-name">Clean Screenshot</div>
@@ -70,7 +74,11 @@
           <!-- Split Merge PDF -->
           <article class="app-card">
             <div class="app-icon">
-              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon">
+              <img
+                src="/assets/img/split-merge-pdf.jpg"
+                alt="Split Merge PDF icon"
+                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
+              >
             </div>
             <div class="app-text">
               <div class="app-name">Split Merge PDF</div>
@@ -87,7 +95,11 @@
           <!-- ScanSignPDF -->
           <article class="app-card">
             <div class="app-icon">
-              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon">
+              <img
+                src="/assets/img/scansignpdf.jpg"
+                alt="ScanSignPDF icon"
+                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
+              >
             </div>
             <div class="app-text">
               <div class="app-name">ScanSignPDF</div>
@@ -121,7 +133,11 @@
           <!-- Photo HEIC to JPEG -->
           <article class="app-card">
             <div class="app-icon">
-              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon">
+              <img
+                src="/assets/img/heic-to-jpeg.jpg"
+                alt="Photo HEIC to JPEG icon"
+                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
+              >
             </div>
             <div class="app-text">
               <div class="app-name">Photo HEIC to JPEG</div>
@@ -138,7 +154,11 @@
           <!-- Attachments to PDF -->
           <article class="app-card">
             <div class="app-icon">
-              <img src="/assets/img/attachments-to-pdf.jpg" alt="Attachments to PDF icon">
+              <img
+                src="/assets/img/attachments-to-pdf.jpg"
+                alt="Attachments to PDF icon"
+                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
+              >
             </div>
             <div class="app-text">
               <div class="app-name">Attachments to PDF</div>
