--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>OpsOh – Tools for everyday tasks.</title>
+  <title>OpsOh – Apps for everyday tasks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta
     name="description"
