--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1>Tools for everyday tasks.</h1>
+        <h1>Tools for everyday tasks</h1>
         <p class="hero-lead">
           OpsOh builds small, focused utilities for iPhone. No accounts, no ads –
           just fast, on-device tools that do one job well.
