--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <footer class="site-footer">
       <div class="footer-inner">
         <div class="footer-left">
-          © 2026 OpsOh. Small, focused tools for everyday tasks.
+          © 2026 OpsOh. Small, focused apps for everyday tasks
         </div>
         <div class="footer-right">
           <a href="/apps/">Apps</a>
