--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
         <div class="footer-right">
           <a href="/apps/">Apps</a>
-          <a href="/privacy/">Privacy</a>
+          <a href="https://opsoh.github.io/opsoh-privacy/" target="_blank" rel="noopener">Privacy</a>
         </div>
       </div>
     </footer>
