--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
       <div class="header-inner">
         <div class="brand">
-          <div class="brand-mark"></div>
+          <div class="brand-mark">
+  <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo">
+</div>
           <div class="brand-name">OpsOh</div>
         </div>
 
