--- a/index.html
+++ b/index.html
@@ -1,197 +1,177 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8" />
   <title>OpsOh – Apps for everyday tasks</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="OpsOh builds small, focused utilities for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
-  >
-  <link rel="stylesheet" href="/assets/css/style.css">
+    content="OpsOh builds small, focused apps for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
+  />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <div class="site-wrapper">
-    <header>
-      <div class="header-inner">
-        <div class="brand">
-          <div class="brand-mark">
-  <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo">
-</div>
-          <div class="brand-name">OpsOh</div>
-        </div>
+  <!-- Site wrapper -->
+  <div class="page">
 
+    <!-- Top navigation -->
+    <header class="site-header">
+      <div class="site-header-inner">
+        <a href="/" class="brand">
+          <img src="assets/img/opsoh-logo.png" alt="OpsOh" class="brand-logo" />
+          <span class="brand-name">OpsOh</span>
+        </a>
         <nav class="nav">
-          <a href="/" class="current">Home</a>
-          <a href="/apps/">Apps</a>
+          <a href="/" class="nav-link nav-link-active">Home</a>
+          <a href="/apps/" class="nav-link">Apps</a>
         </nav>
       </div>
     </header>
 
-    <main>
+    <!-- Main content -->
+    <main class="main">
+
       <!-- Hero -->
       <section class="hero">
-        <h1>Tools for everyday tasks</h1>
-        <p class="hero-lead">
-          OpsOh builds small, focused utilities for iPhone. No accounts, no ads –
-          just fast, on-device tools that do one job well.
-        </p>
-
-        <p class="hero-meta">
-          <span>• Built for iOS</span>
-          <span>• On-device processing</span>
-          <span>• No subscriptions</span>
-        </p>
+        <div class="hero-text">
+          <h1>Apps for everyday tasks.</h1>
+          <p class="hero-lead">
+            OpsOh builds small, focused apps for iPhone. No accounts, no ads –
+            just fast, on-device tools that do one job well.
+          </p>
+          <p class="hero-meta">
+            • Built for iOS &nbsp;•&nbsp; On-device processing &nbsp;•&nbsp; No subscriptions
+          </p>
+          <div class="hero-actions">
+            <a href="/apps/" class="button-primary">Browse all apps</a>
+          </div>
+        </div>
       </section>
 
       <!-- Featured apps -->
-      <section class="featured">
+      <section class="section">
         <div class="section-header">
           <h2>Featured apps</h2>
-          <p>A few of the tools available today.</p>
+          <p class="section-subtitle">A few of the tools available today.</p>
         </div>
 
         <div class="app-grid">
-          <!-- Clean Screenshot -->
           <article class="app-card">
-            <div class="app-icon">
-              <img
-                src="/assets/img/clean-screenshot.jpeg"
-                alt="Clean Screenshot icon"
-                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
-              >
-            </div>
-            <div class="app-text">
-              <div class="app-name">Clean Screenshot</div>
-              <div class="app-tagline">
-                Remove status bars &amp; clutter from screenshots.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">CS</div>
+              <div>
+                <h3 class="app-title">Clean Screenshot</h3>
+                <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
               </div>
-              <div class="app-meta">Screenshots · iPhone</div>
             </div>
-            <div class="app-link">
-              <span class="app-link-label">Coming soon</span>
+            <p class="app-meta">Screenshots · iPhone</p>
+            <div class="app-footer">
+              <span class="pill pill-soon">Coming soon</span>
             </div>
           </article>
 
-          <!-- Split Merge PDF -->
           <article class="app-card">
-            <div class="app-icon">
-              <img
-                src="/assets/img/split-merge-pdf.jpg"
-                alt="Split Merge PDF icon"
-                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
-              >
-            </div>
-            <div class="app-text">
-              <div class="app-name">Split Merge PDF</div>
-              <div class="app-tagline">
-                Split one PDF into many, or merge multiple into one.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">SM</div>
+              <div>
+                <h3 class="app-title">Split Merge PDF</h3>
+                <p class="app-tagline">Split one PDF into many, or merge several into one.</p>
               </div>
-              <div class="app-meta">PDF tools · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">PDF tools · iPhone</p>
+            <div class="app-footer">
+              <a href="/apps/" class="app-link">View</a>
             </div>
           </article>
 
-          <!-- ScanSignPDF -->
           <article class="app-card">
-            <div class="app-icon">
-              <img
-                src="/assets/img/scansignpdf.jpg"
-                alt="ScanSignPDF icon"
-                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
-              >
-            </div>
-            <div class="app-text">
-              <div class="app-name">ScanSignPDF</div>
-              <div class="app-tagline">
-                Scan, sign, and export PDFs right on your device.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">SS</div>
+              <div>
+                <h3 class="app-title">ScanSignPDF</h3>
+                <p class="app-tagline">Scan, sign, and export PDFs in seconds.</p>
               </div>
-              <div class="app-meta">PDF tools · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">PDF tools · iPhone</p>
+            <div class="app-footer">
+              <a href="/apps/" class="app-link">View</a>
             </div>
           </article>
 
-          <!-- Images to PDF (no icon yet) -->
           <article class="app-card">
-            <div class="app-icon app-icon-placeholder">
-              <span>PDF</span>
-            </div>
-            <div class="app-text">
-              <div class="app-name">Images to PDF</div>
-              <div class="app-tagline">
-                Turn your photos into a single shareable PDF.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">IP</div>
+              <div>
+                <h3 class="app-title">Images to PDF</h3>
+                <p class="app-tagline">Turn your photos into clean, shareable PDFs.</p>
               </div>
-              <div class="app-meta">Photos · iPhone</div>
             </div>
-            <div class="app-link">
-              <span class="app-link-label">Coming soon</span>
+            <p class="app-meta">Photos · iPhone</p>
+            <div class="app-footer">
+              <span class="pill pill-soon">Coming soon</span>
             </div>
           </article>
 
-          <!-- Photo HEIC to JPEG -->
           <article class="app-card">
-            <div class="app-icon">
-              <img
-                src="/assets/img/heic-to-jpeg.jpg"
-                alt="Photo HEIC to JPEG icon"
-                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
-              >
-            </div>
-            <div class="app-text">
-              <div class="app-name">Photo HEIC to JPEG</div>
-              <div class="app-tagline">
-                Convert HEIC photos to standard JPEG files.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">HJ</div>
+              <div>
+                <h3 class="app-title">Photo HEIC to JPEG</h3>
+                <p class="app-tagline">Convert HEIC photos to JPEG for easy sharing.</p>
               </div>
-              <div class="app-meta">Photos · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">Photos · iPhone</p>
+            <div class="app-footer">
+              <a href="/apps/" class="app-link">View</a>
             </div>
           </article>
 
-          <!-- Attachments to PDF -->
           <article class="app-card">
-            <div class="app-icon">
-              <img
-                src="/assets/img/attachments-to-pdf.jpg"
-                alt="Attachments to PDF icon"
-                style="width: 40px; height: 40px; border-radius: 12px; display: block; object-fit: cover;"
-              >
-            </div>
-            <div class="app-text">
-              <div class="app-name">Attachments to PDF</div>
-              <div class="app-tagline">
-                Turn email attachments into a single PDF.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">AP</div>
+              <div>
+                <h3 class="app-title">Attachments to PDF</h3>
+                <p class="app-tagline">Turn email attachments into a single PDF.</p>
               </div>
-              <div class="app-meta">Files · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">Files · iPhone</p>
+            <div class="app-footer">
+              <a href="/apps/" class="app-link">View</a>
             </div>
           </article>
         </div>
 
-        <div class="browse-link">
-          <a href="/apps/">Browse all apps →</a>
+        <div class="section-footer">
+          <a href="/apps/" class="text-link">Browse all apps →</a>
         </div>
       </section>
+
+      <!-- Contact -->
+      <section class="section">
+        <div class="section-header">
+          <h2>Contact</h2>
+          <p class="section-subtitle">
+            Questions, ideas, or feedback about OpsOh apps? Get in touch.
+          </p>
+        </div>
+
+        <div class="contact-card">
+          <p>
+            Email <a href="mailto:giorgio@opsoh.com">support@opsoh.com</a> and we’ll get back to you as soon as we can.
+          </p>
+        </div>
+      </section>
+
     </main>
 
+    <!-- Footer -->
     <footer class="site-footer">
-      <div class="footer-inner">
-        <div class="footer-left">
-          © 2026 OpsOh. Small, focused apps for everyday tasks
-        </div>
-        <div class="footer-right">
-          <a href="/apps/">Apps</a>
-          <a href="https://opsoh.github.io/opsoh-privacy/" target="_blank" rel="noopener">Privacy</a>
-        </div>
+      <div class="site-footer-inner">
+        <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
+        <a href="/privacy.html" class="footer-link">Privacy Policy</a>
       </div>
     </footer>
+
   </div>
 </body>
 </html>
