--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
           </p>
           <div class="hero-actions">
             <a href="/apps/" class="button-primary">Browse all apps</a>
+
+            <!-- App Store badge -->
+            <a href="#" class="store-badge-link">
+              <img
+                src="assets/img/app-store-badge.svg"
+                alt="Download OpsOh apps on the App Store"
+                class="store-badge"
+              />
+            </a>
           </div>
         </div>
       </section>
@@ -52,7 +61,7 @@
       <section class="section">
         <div class="section-header">
           <h2>Featured apps</h2>
-          <p class="section-subtitle">A few of the tools available today.</p>
+          <p class="section-subtitle">A few of the apps available today.</p>
         </div>
 
         <div class="app-grid">
@@ -157,7 +166,9 @@
 
         <div class="contact-card">
           <p>
-            Email <a href="mailto:giorgio@opsoh.com">support@opsoh.com</a> and we’ll get back to you as soon as we can.
+            Email
+            <a href="mailto:support@opsoh.com">support@opsoh.com</a>
+            and we’ll get back to you as soon as we can.
           </p>
         </div>
       </section>
@@ -168,7 +179,7 @@
     <footer class="site-footer">
       <div class="site-footer-inner">
         <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
-        <a href="/privacy.html" class="footer-link">Privacy Policy</a>
+        <a href="https://opsoh.github.io/opsoh-privacy/" class="footer-link">Privacy Policy</a>
       </div>
     </footer>
 
