--- a/apps/index.html
+++ b/apps/index.html
@@ -35,38 +35,22 @@
         <div class="hero-text">
           <h1>All OpsOh apps</h1>
           <p class="hero-lead">
-            A growing collection of focused utilities for iPhone. No accounts, no ads –
-            just quick tools that stay out of your way.
+            A small collection of focused utilities for iPhone. No accounts, no ads –
+            just quick apps that do one job well.
           </p>
         </div>
       </section>
 
-      <!-- Apps grid -->
+      <!-- PDF tools -->
       <section class="section">
         <div class="section-header">
-          <h2>Available today</h2>
+          <h2>PDF tools</h2>
           <p class="section-subtitle">
-            Update the links below as new versions go live in the App Store.
+            Lightweight utilities to clean, split, merge, scan, and export PDFs.
           </p>
         </div>
 
         <div class="app-grid app-grid-large">
-
-          <!-- Example cards; update href values with real App Store links when ready -->
-
-          <article class="app-card">
-            <div class="app-card-header">
-              <div class="app-icon-placeholder">CS</div>
-              <div>
-                <h3 class="app-title">Clean Screenshot</h3>
-                <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
-              </div>
-            </div>
-            <p class="app-meta">Screenshots · iPhone</p>
-            <div class="app-footer">
-              <span class="pill pill-soon">Coming soon</span>
-            </div>
-          </article>
 
           <article class="app-card">
             <div class="app-card-header">
@@ -110,6 +94,34 @@
             </div>
           </article>
 
+        </div>
+      </section>
+
+      <!-- Photos & files -->
+      <section class="section">
+        <div class="section-header">
+          <h2>Photos & files</h2>
+          <p class="section-subtitle">
+            Small helpers for screenshots, photos, and email attachments.
+          </p>
+        </div>
+
+        <div class="app-grid app-grid-large">
+
+          <article class="app-card">
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">CS</div>
+              <div>
+                <h3 class="app-title">Clean Screenshot</h3>
+                <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
+              </div>
+            </div>
+            <p class="app-meta">Screenshots · iPhone</p>
+            <div class="app-footer">
+              <span class="pill pill-soon">Coming soon</span>
+            </div>
+          </article>
+
           <article class="app-card">
             <div class="app-card-header">
               <div class="app-icon-placeholder">HJ</div>
@@ -138,23 +150,23 @@
             </div>
           </article>
 
-          <!-- Add more cards here as new apps ship -->
-
         </div>
       </section>
 
-      <!-- Contact on apps page as well -->
+      <!-- Support -->
       <section class="section">
         <div class="section-header">
-          <h2>Need help with an app?</h2>
+          <h2>Support</h2>
           <p class="section-subtitle">
-            For support, feature ideas, or bug reports, send a quick email.
+            Need help with an app, found a bug, or have an idea?
           </p>
         </div>
 
         <div class="contact-card">
           <p>
-            Email <a href="mailto:giorgio@opsoh.com">support@opsoh.com</a> with the app name and a short note.
+            Email
+            <a href="mailto:support@opsoh.com">support@opsoh.com</a>
+            with the app name and a short description. Screenshots are always welcome.
           </p>
         </div>
       </section>
@@ -165,7 +177,7 @@
     <footer class="site-footer">
       <div class="site-footer-inner">
         <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
-        <a href="/privacy.html" class="footer-link">Privacy Policy</a>
+        <a href="https://opsoh.github.io/opsoh-privacy/" class="footer-link">Privacy Policy</a>
       </div>
     </footer>
 
