--- a/apps/index.html
+++ b/apps/index.html
@@ -52,9 +52,14 @@
 
         <div class="app-grid app-grid-large">
 
+          <!-- Split Merge PDF -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">SM</div>
+              <img
+                src="../assets/img/icon-split-merge-pdf.png"
+                alt="Split Merge PDF app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">Split Merge PDF</h3>
                 <p class="app-tagline">Split one PDF into many, or merge several into one.</p>
@@ -66,9 +71,14 @@
             </div>
           </article>
 
+          <!-- ScanSignPDF -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">SS</div>
+              <img
+                src="../assets/img/icon-scansignpdf.png"
+                alt="ScanSignPDF app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">ScanSignPDF</h3>
                 <p class="app-tagline">Scan, sign, and export PDFs in seconds.</p>
@@ -80,9 +90,14 @@
             </div>
           </article>
 
+          <!-- Images to PDF -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">IP</div>
+              <img
+                src="../assets/img/icon-images-to-pdf.png"
+                alt="Images to PDF app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">Images to PDF</h3>
                 <p class="app-tagline">Turn your photos into clean, shareable PDFs.</p>
@@ -91,6 +106,25 @@
             <p class="app-meta">Photos · iPhone</p>
             <div class="app-footer">
               <span class="pill pill-soon">Coming soon</span>
+            </div>
+          </article>
+
+          <!-- PhotoPDF Maker -->
+          <article class="app-card">
+            <div class="app-card-header">
+              <img
+                src="../assets/img/icon-photopdf-maker.png"
+                alt="PhotoPDF Maker app icon"
+                class="app-icon"
+              />
+              <div>
+                <h3 class="app-title">PhotoPDF Maker</h3>
+                <p class="app-tagline">Turn multiple photos into a single PDF in seconds.</p>
+              </div>
+            </div>
+            <p class="app-meta">PDF tools · iPhone</p>
+            <div class="app-footer">
+              <a href="#" class="button-ghost">View on the App Store</a>
             </div>
           </article>
 
@@ -108,9 +142,14 @@
 
         <div class="app-grid app-grid-large">
 
+          <!-- Clean Screenshot -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">CS</div>
+              <img
+                src="../assets/img/icon-clean-screenshot.png"
+                alt="Clean Screenshot app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">Clean Screenshot</h3>
                 <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
@@ -122,9 +161,14 @@
             </div>
           </article>
 
+          <!-- Photo HEIC to JPEG -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">HJ</div>
+              <img
+                src="../assets/img/icon-photo-heic-jpeg.png"
+                alt="Photo HEIC to JPEG app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">Photo HEIC to JPEG</h3>
                 <p class="app-tagline">Convert HEIC photos to JPEG for easy sharing.</p>
@@ -136,9 +180,14 @@
             </div>
           </article>
 
+          <!-- Attachments to PDF -->
           <article class="app-card">
             <div class="app-card-header">
-              <div class="app-icon-placeholder">AP</div>
+              <img
+                src="../assets/img/icon-attachments-to-pdf.png"
+                alt="Attachments to PDF app icon"
+                class="app-icon"
+              />
               <div>
                 <h3 class="app-title">Attachments to PDF</h3>
                 <p class="app-tagline">Turn email attachments into a single PDF.</p>
