--- a/apps/index.html
+++ b/apps/index.html
@@ -56,7 +56,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-split-merge-pdf.png"
+                src="../assets/img/split-merge-pdf.jpg"
                 alt="Split Merge PDF app icon"
                 class="app-icon"
               />
@@ -75,7 +75,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-scansignpdf.png"
+                src="../assets/img/scansignpdf.jpg"
                 alt="ScanSignPDF app icon"
                 class="app-icon"
               />
@@ -94,7 +94,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-images-to-pdf.png"
+                src="../assets/img/rename-photos.jpg"
                 alt="Images to PDF app icon"
                 class="app-icon"
               />
@@ -113,7 +113,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-photopdf-maker.png"
+                src="../assets/img/photo-pdf-maker.png"
                 alt="PhotoPDF Maker app icon"
                 class="app-icon"
               />
@@ -146,7 +146,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-clean-screenshot.png"
+                src="../assets/img/clean-screenshot.jpg"
                 alt="Clean Screenshot app icon"
                 class="app-icon"
               />
@@ -165,7 +165,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-photo-heic-jpeg.png"
+                src="../assets/img/heic-to-jpeg.jpg"
                 alt="Photo HEIC to JPEG app icon"
                 class="app-icon"
               />
@@ -184,7 +184,7 @@
           <article class="app-card">
             <div class="app-card-header">
               <img
-                src="../assets/img/icon-attachments-to-pdf.png"
+                src="../assets/img/attachement-to-pdf.jpg"
                 alt="Attachments to PDF app icon"
                 class="app-icon"
               />
