--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="OpsOh builds small, focused apps for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
+    content="OpsOh builds customized, focused apps for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
   />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
